Start adding styling

--- a/VendorOrderTracker/Views/Home/Index.cshtml
+++ b/VendorOrderTracker/Views/Home/Index.cshtml
@@ -1,6 +1,9 @@
 @{
-    Layout = "_Layout";
+  Layout = "_Layout";
 }
+<div class="box">
+    <h1>Welcome to the Vendor Tracker!</h1>
+    <button type="button" class="btn" onclick="window.location.href = '/vendors'">View Vendors</button>
+</div>
 
-<h1>Welcome to the Vendor Tracker!</h1>
-<h3><a href='/vendors'>View vendors</a></h3>
+
