--- a/VendorOrderTracker/Views/Orders/Destroy.cshtml
+++ b/VendorOrderTracker/Views/Orders/Destroy.cshtml
@@ -2,16 +2,22 @@
     Layout = "_Layout";
 }
 
-<h1>Delete order</h1>
+<div class="box2">
+  <h1>Delete order</h1>
 
-<form action='/vendors/@Model["vendor"].Id/orders/@Model["order"].Id' method="post">
-  <label for="deleteOrder">Do you want to delete order @Model["order"].Title ?</label>
-  <input type="checkbox" name="deleteOrder" id="deleteOrder" value="true">
-  <button type="submit">Delete</button>
-</form>
+  <h3>Do you want to delete order @Model["order"].Title ?</h3>
+  <form action='/vendors/@Model["vendor"].Id/orders/@Model["order"].Id' method="post">
+    <div class="form-check">
+      <input  class="form-check-input" type="checkbox" name="deleteOrder" id="deleteOrder" value="true">
+      <label for="deleteOrder">Yes/No</label>
+    </div>
+    
+    <button class="btn" type="submit">Delete/Back</button>
+  </form>
 
-<p><a href='/vendors/@Model["vendor"].Id/orders/@Model["order"].Id'>Back to order</a></p>
-<p><a href='/vendors/@Model["vendor"].Id/orders/'>Back to orders</a></p>
-<p><a href='/vendors/@Model["vendor"].Id'>Back to vendor</a></p>
-<p><a href="/vendors">Back to vendors.</a></p>
-<p><a href="/">Back home</a></p>
+  <button type="button" class="btn" onclick="window.location.href = '/vendors/@Model["vendor"].Id/orders/@Model["order"].Id'">Back to order</button>
+  <button type="button" class="btn" onclick="window.location.href = '/vendors/@Model["vendor"].Id/orders'">Back to orders</button>
+  <button type="button" class="btn" onclick="window.location.href = '/vendors/@Model["vendor"].Id'">Back to vendor</button>
+  <button type="button" class="btn" onclick="window.location.href = '/vendors'">Back to vendors</button>
+  <button type="button" class="btn" onclick="window.location.href = '/'">Home</button>
+</div>
