--- a/VendorOrderTracker/Views/Orders/Edit.cshtml
+++ b/VendorOrderTracker/Views/Orders/Edit.cshtml
@@ -2,22 +2,24 @@
     Layout = "_Layout";
 }
 
-<h1>Edit order</h1>
+<div class="box2">
+    <h2>Edit order</h2>
 
-<form action='/vendors/@Model["vendor"].Id/orders/@Model["order"].Id' method="post">
-    <label for="updatedOrderTitle">Order title</label>
-    <input id="updatedOrderTitle" name="updatedOrderTitle" type="text" value='@Model["order"].Title'>
-    <label for="updatedOrderDescription">Order description</label>
-    <textarea id="updatedOrderDescription" name="updatedOrderDescription" type="text">@Model["order"].Description</textarea>
-    <label for="updatedOrderPrice">Order price</label>
-    <input id="updatedOrderPrice" name="updatedOrderPrice" type="number" value='@Model["order"].Price'>
-    <label for="updatedOrderDate">Order date</label>
-    <input id="updatedOrderDate" name="updatedOrderDate" type="date" value='@Model["order"].Date'>
-    <button type="submit">Add</button>
-</form>
+    <form action='/vendors/@Model["vendor"].Id/orders/@Model["order"].Id' method="post">
+        <label for="updatedOrderTitle">Order title</label>
+        <input class="form-control" id="updatedOrderTitle" name="updatedOrderTitle" type="text" value='@Model["order"].Title'>
+        <label for="updatedOrderDescription">Order description</label>
+        <textarea class="form-control" id="updatedOrderDescription" name="updatedOrderDescription" type="text">@Model["order"].Description</textarea>
+        <label for="updatedOrderPrice">Order price</label>
+        <input class="form-control" id="updatedOrderPrice" name="updatedOrderPrice" type="number" value='@Model["order"].Price'>
+        <label for="updatedOrderDate">Order date</label>
+        <input class="form-control" id="updatedOrderDate" name="updatedOrderDate" type="date" value='@Model["order"].Date'>
+        <button class="btn" type="submit">Add</button>
+    </form>
 
-<p><a href='/vendors/@Model["vendor"].Id/orders/@Model["order"].Id'>Back to order.</a></p>
-<p><a href='/vendors/@Model["vendor"].Id/orders'>Back to orders.</a></p>
-<p><a href='/vendors/@Model["vendor"].Id'>Back to vendor</a></p>
-<p><a href="/vendors">Back to vendors.</a></p>
-<p><a href="/">Back home</a></p>
+    <button type="button" class="btn" onclick="window.location.href = '/vendors/@Model["vendor"].Id/orders/@Model["order"].Id'">Back to order</button>
+    <button type="button" class="btn" onclick="window.location.href = '/vendors/@Model["vendor"].Id/orders'">Back to orders</button>
+    <button type="button" class="btn" onclick="window.location.href = '/vendors/@Model["vendor"].Id'">Back to vendor</button>
+    <button type="button" class="btn" onclick="window.location.href = '/vendors'">Back to vendors</button>
+    <button type="button" class="btn" onclick="window.location.href = '/'">Home</button>
+</div>
