--- a/VendorOrderTracker/Views/Orders/Index.cshtml
+++ b/VendorOrderTracker/Views/Orders/Index.cshtml
@@ -3,28 +3,29 @@
     Layout = "_Layout";
 }
 
-@if(Model["orders"] == null)
-{
-    <h3>Orders have been deleted!</h3>
-}
-else if(Model["orders"].Count == 0)
-{
-    <h3>No orders have been added yet!</h3>
-}
-else
-{
-    <h3>Here are all the orders of vendor @Model["vendor"].Name:</h3>
-    <ol>
-    @foreach (Order order in @Model["orders"])
+<div class="box2">
+    @if(Model["orders"] == null)
     {
-        <li><a href='/vendors/@Model["vendor"].Id/orders/@order.Id'>@order.Title</li>
+        <h3>Orders have been deleted!</h3>
     }
-    </ol>
-}
+    else if(Model["orders"].Count == 0)
+    {
+        <h3>No orders have been added yet!</h3>
+    }
+    else
+    {
+        <h3>Here are all the orders of vendor @Model["vendor"].Name:</h3>
+        <ol>
+        @foreach (Order order in @Model["orders"])
+        {
+            <li><h3><a href='/vendors/@Model["vendor"].Id/orders/@order.Id'>@order.Title</a></h3></li>
+        }
+        </ol>
+    }
 
-
-<p><a href='/vendors/@Model["vendor"].Id/orders/new'>Add a new order</a></p>
-<p><a href='/vendors/@Model["vendor"].Id/orders/delete'>Delete all orders</a></p>
-<p><a href='/vendors/@Model["vendor"].Id/'>Return to vendor page</a></p>
-<p><a href='/vendors'>Return to vendor list</a></p>
-<p><a href='/'>Return to Main Page</a></p>
+    <button type="button" class="btn" onclick="window.location.href = '/vendors/@Model["vendor"].Id/orders/new'">Add a new order</button>
+    <button type="button" class="btn" onclick="window.location.href = '/vendors/@Model["vendor"].Id/orders/delete'">Delete all orders</button>
+    <button type="button" class="btn" onclick="window.location.href = '/vendors/@Model["vendor"].Id'">Back to vendor</button>
+    <button type="button" class="btn" onclick="window.location.href = '/vendors'">Back to vendors</button>
+    <button type="button" class="btn" onclick="window.location.href = '/'">Home</button>
+</div>
